Send Email Register

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,13 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 mybatis.mapper-locations=classpath:mapper/*.xml
 
-
+# SMTP Server Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=maiqakai@gmail.com
+spring.mail.password=wjsgikjlprwqwayy
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 #log
 logging.level.org.springframework.security=ERROR
