--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,1 @@
-#thymeleaf
-#spring.thymeleaf.prefix=classpath:/templates/
-#spring.thymeleaf.encoding=UTF-8
-#spring.thymeleaf.suffix=.html
-
-#DB
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=tatu0930
-spring.datasource.url=jdbc:postgresql://192.168.3.222/kk_pgs_mp_d
-spring.datasource.username=mp_auth
-spring.datasource.password=mp_auth
-
-# spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-# spring.datasource.username=postgres
-# spring.datasource.password=1996
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-mybatis.mapper-locations=classpath:mapper/*.xml
-
-
-
-#log
-logging.level.org.springframework.security=ERROR
-
+spring.profiles.active=dev
